Add files via upload
habe unten bei sorted List das "toList" ersetzt durch ".collect(Collectors.toList())"